--- a/doc/manual_build/mwf_manual.tex
+++ b/doc/manual_build/mwf_manual.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt]{article}
 
-\title{MWF tool for EEG artifact removal - Manual}
+\title{MWF toolbox for EEG artifact removal - Manual}
 \author{Ben Somers, Tom Francart, Alexander Bertrand}
 \date{November 2017}
 
@@ -217,7 +217,7 @@ We are open to any suggestions for interesting features or ways to further impro
 
 \bibitem{somers2018generic}
   B. Somers, Ben, T. Francart and A. Bertrand,
-  ``A generic EEG artifact removal algorithm based on the multi-channel Wiener filter, 
+  ``A generic EEG artifact removal algorithm based on the multi-channel Wiener filter", 
   \textit{Journal of Neural Engineering},
   2018.
 
