--- a/doc/manual_build/mwf_manual.tex
+++ b/doc/manual_build/mwf_manual.tex
@@ -10,6 +10,14 @@
 \usepackage{listings}
 \usepackage{graphicx}
 
+\hypersetup{
+    colorlinks=true,
+    linkcolor=black,
+    filecolor=black,      
+    urlcolor=blue,
+    citecolor=black,
+}
+\urlstyle{same}
 
 \begin{document}
 
@@ -31,9 +39,10 @@ The GitHub repository contains the following folders and files:
 \item[-] \textbf{mwf folder}: contains all required MATLAB code for using the MWF.
 \item[-] \textbf{doc folder}: contains manual and demo files.
 \item[-] \textbf{paper folder}: contains code for generating the results and figures described in the paper~\cite{somers2018generic}. These are only included for reproducibility of the paper, they are not needed for your own use of the MWF.
-\item[-] \textbf{.gitignore}, \textbf{README} and \textbf{LICENSE} files. Note that the licence under which this code is distributed does not allow usage for commercial purposes (see \url{www.github.com/exporl/mwf-artifact-removal/blob/master/LICENSE.md}).
+\item[-] \textbf{.gitignore}, \textbf{README} and \textbf{LICENSE} files. Note that the licence (\href{www.github.com/exporl/mwf-artifact-removal/blob/master/LICENSE.md}{online link}) under which this code is distributed does not allow usage for commercial purposes.
 \end{itemize}
 
+\newpage
 \section{Quick start guide}
 \label{sec:quickstart}
 
@@ -48,7 +57,18 @@ The MWF first requires examples of EEG with and EEG without artifacts. Based on 
     mask = mwf_getmask(EEG, samplerate)
 \end{lstlisting}
 
-This pops up the GUI in which artifacts can be marked by clicking and dragging over them. When done, clicking the 'Save Marks' button will close the GUI and the function returns a binary (1 x samples) mask. In this mask, ones correspond to artifact segments, and zeros correspond to clean data. 
+This pops up the GUI in which artifacts can be marked by clicking and dragging over them. When done, clicking the 'Save Marks' button will close the GUI and the function returns a binary (1 x samples) mask. In this mask, ones correspond to artifact segments, and zeros correspond to clean data. Optionally, the mask may contain NaNs which indicate segments to be ignored from the MWF computation (i.e. they belong neither to the artifact nor the clean segments). Section~\ref{tips} contains extra tips on annotating artifacts.
+\\
+
+\textbf{Important note:} all segments that are not marked and come BEFORE the lasted marked segment will be treated as artifact-free samples in the training of the filter. The samples that come after the last marked segment are not used in the filter design. In other words: the filter design assumes that ALL artifacts before the last marked artifact are marked.
+
+Because samples after the lasted marked segment are ignored, it is not necessary to go through the entire signal to mark all the artifacts. It is sufficient to annotate only the first few seconds or minutes of the signal. However, the more artifacts are marked, the better the filter design will be.
+
+It is not required to manually mark the entire signal in the GUI; it suffices to go through the first few seconds or minutes of data and mark all artifacts you see there. All samples after the last marked artifact segment are set to NaN, which will exclude them from the data used to train the MWF. However, there are two important considerations:
+\begin{itemize}[noitemsep]
+\item[-] The more artifacts are marked, the better the filter designed to remove those artifacts will be.
+\item[-] In addition to the previous point, there should be enough clean (unmarked) segments before the last marked artifact for a good filter design.
+\end{itemize}
 
 The artifact detection step is not inherently a part of the MWF algorithm: if you prefer, you can also use a different method for acquiring the artifact mask (e.g. an automatic method, for example based on thresholding,\ldots). The mask needs to consist of ones and zeros, and have the same length as the EEG data.
 \\
@@ -87,7 +107,7 @@ The last argument \textbf{mode} specifies the GUI to use. By default, EEGLAB is 
 
 \subsubsection{Output}
 
-The \textbf{mask} variable contains the user's markings in a vector of the same length as the input EEG data. At time points where an artifact was marked, the vector contains ones, at unmarked time points the mask vector contains zeros.
+The \textbf{mask} variable contains the user's markings in a vector of the same length as the input EEG data. At time points where an artifact was marked, the vector contains ones, at unmarked time points the mask vector contains zeros. All samples after the last marked artifact segment are set to NaN, which will exclude them from the data used to train the MWF. This allows the user to only mark the first part of the signals instead of having to mark everything.
 
 \subsubsection{Using the GUI for artifact marking}
 
@@ -101,17 +121,15 @@ Running this function will pop up an EEGLAB plot as depicted in figure~\ref{fig:
 \end{figure}
 
 \subsubsection{Notes}
+\label{tips}
 
 \begin{itemize}[noitemsep]
+\item[-] All segments that are not marked and come BEFORE the lasted marked segment will be treated as artifact-free samples in the training of the filter. The samples that come after the last marked segment are not used in the filter design. In other words: the filter design assumes that ALL artifacts before the last marked artifact are marked.
+\item[-] The more examples of artifacts are marked, the better the MWF design will be.
+\item[-] In addition to marking enough examples of artifacts, it is also important to have enough segments of clean (unmarked) EEG data in between the marked artifact  segments.
 \item[-] MWF performance decreases quickly if artifacts are ``missed'' and are included in the clean data. However, it is no problem when clean data is included in the artifact markings. Therefore, when marking artifact segments, it is recommended to draw broad windows around the artifacts. If you are unsure whether a segment is artifact or not, it is better to mark it anyway.
-\item[-] If you alter the mask after obtaining it with this function, any value other than 1 and 0 will be ignored for the computation of the MWF. You can use this to exclude EEG segments from the training of the MWF.
-\item[-] For decent estimation of the signal statistics, enough samples need to be marked (at least one minute). If you have very long EEG recordings, it is undesired to go through all of the data to mark it. There are two options in this case:
-\begin{itemize}[noitemsep]
-\item Only mark the first X seconds of EEG, and alter the output mask to be NaN (or any other value) in the time segments you didn't mark after second X.
-\item Only mark the first X seconds of EEG, and set the train\_len parameter in the mwf\_params function (see~\ref{mwfparams}) to X seconds. 
+\item[-] If you alter the mask after obtaining it with this function, any value other than 1 and 0 will be ignored for the computation of the MWF. You can use this to exclude EEG segments from the training of the MWF (e.g. by setting them to NaN).
 \end{itemize}
-\end{itemize}
-
 \vspace{10mm}
 
 \subsection{mwf\_process}
@@ -120,7 +138,7 @@ Running this function will pop up an EEGLAB plot as depicted in figure~\ref{fig:
 [n, d, W, SER, ARR, p] = mwf_process(EEG, mask, delay)
 \end{lstlisting}
 
-The mwf\_process function processes the input \textbf{EEG} with the MWF to remove the artifacts as marked in the input \textbf{mask}. An option \textbf{delay} input argument can be specified to include temporal information in the MWF, which will improve artifact removal but increase compuation time. The delay should be a positive scalar (samples) and is 0 by default. All other MWF parameters are set to their default values which should work well in general.
+The mwf\_process function processes the input \textbf{EEG} with the MWF to remove the artifacts as marked in the input \textbf{mask}. An option \textbf{delay} input argument can be specified to include temporal information in the MWF, which will improve artifact removal but increase computation time. The delay should be a positive scalar (samples) and is 0 by default. All other MWF parameters are set to their default values which should work well in general.
 
 The function returns the clean, artifact-free EEG data \textbf{n} and the artifact estimate \textbf{d}. Other outputs are the filter matrix \textbf{W}, the performance measures \textbf{SER} and \textbf{ARR}, and the struct \textbf{p} containing the parameters used for the processing.
 
@@ -139,7 +157,7 @@ p = mwf_params(`parameter1', `value1', `parameter2', `value2', ...)
 This function creates a MATLAB structure \textbf{p} containing key-value pairs of parameters defining the MWF processing. The struct should be passed on to the mwf\_compute function (see section~\ref{mwfcompute}). Parameters can be set by providing their keyword followed by the desired value as an input, for example:
 %
 \begin{lstlisting}[frame=single, language=matlab]
-p = mwf_params(`delay', 5, `rank', `poseig', `srate', 200)
+p = mwf_params(`delay', 5, `rank', `poseig')
 \end{lstlisting}
 %
 Unspecified parameters will be kept at their default value.
@@ -147,7 +165,7 @@ Unspecified parameters will be kept at their default value.
 The following parameters are able to be set:
 
 \begin{itemize}
-\item \textbf{delay}: expects a non-negative integer. Specifies the amount of channel lags to incorporate in the filter. Both positive and negative delays are used.
+\item \textbf{delay}: expects a non-negative integer. Specifies the amount of channel lags, expressed in samples, to incorporate in the filter, e.g. if delay is 5, then all delays from -5,~\ldots,~5 will be included. The default value is 0 (i.e. no delays will be inlcuded).
 
 \item \textbf{rank}: expects one of the following strings (see \cite{somers2018generic} for more details):
 \begin{itemize}
@@ -159,17 +177,14 @@ The following parameters are able to be set:
 
 \item \textbf{rankopt}: specify X if `first' or `pct' were selected for the rank parameter. Expects a positive integer (`first') or a percentage (`pct').
 
-\item \textbf{train\_len}: used to indicate how long the training length is in seconds, i.e. how much of the EEG data was marked to obtain the mask. All time samples after train\_len seconds will not be used for computing the MWF filter. If train\_len is 0 (default), the entire EEG signal will be used. If train\_len is specified, srate needs to be specified as well.
-
-\item \textbf{srate}: EEG sample rate in Hz. Only required if train\_len is specified and greater than 0 seconds.
-
-\item \textbf{mu}: noiseweighting factor. By default, mu is 1, which results in a regular MWF. If mu $> 1$, a so-called Speech Distortion Weighted MWF (SDW-MWF) is computed, which allows better artifact estimation, but introduces more noise in the artifact-free segments (i.e. higher ARR but lower SER). The opposite trade-off is true when mu $< 1$ (but greater than 0).
+\item \textbf{mu}: noiseweighting factor. By default, mu is 1, which results in a regular MWF. If mu $> 1$, a so-called Distortion Weighted MWF (DW-MWF)~\cite{serizel2010integrated} is computed, which allows better artifact estimation, but introduces more noise in the artifact-free segments (i.e. higher ARR but lower SER). The opposite trade-off is true when mu $< 1$ (but greater than 0).
 
 \end{itemize}
 
 \subsubsection{Notes}
 
 \begin{itemize}[noitemsep]
+\item[-] In \cite{somers2018generic}, it was shown that there is a benefit of including some delays (e.g. 5 samples) in the MWF design. However, there is a trade-off with computation time.
 \item[-] In \cite{somers2018generic}, it was shown that the poseig option for rank generally selects the optimal rank for the MWF, which is why it is the default option.
 \item[-] The factor mu allows to trade off artifact estimation quality for clean EEG distortion. It is recommended to leave it at the default value of 1.
 \end{itemize}
@@ -182,7 +197,7 @@ The following parameters are able to be set:
 [W, Lambda] = mwf_compute(EEG, mask, p)
 \end{lstlisting}
 
-This function computes the MWF based on the input \textbf{EEG}. The EEG is split into artifacted and clean segments using the \textbf{mask}. Additional parameters involved in the processing are set in the parameter struct \textbf{p}.
+This function computes the MWF based on the input \textbf{EEG}. The EEG is split into artifacted and clean segments using the \textbf{mask}. Any samples corresponding to NaNs in the mask are ignored from the MWF computation. Additional parameters involved in the processing are set in the parameter struct \textbf{p}.
 
 The function returns the MWF matrix \textbf{W}, as well as an ordered diagonal matrix containing the generalized eigenvalues in \textbf{Lambda}. The sizes of W and Lambda will be M~x~M, where M is the number of channels \emph{including delayed channels}. 
 
@@ -194,7 +209,7 @@ The function returns the MWF matrix \textbf{W}, as well as an ordered diagonal m
 
 This function applies a precomputed MWF matrix \textbf{W} to the input \textbf{EEG} data. The filtered, artifact-free EEG data \textbf{n} is returned, as well as the estimate of the artifacts \textbf{d}. It may be informative to inspect the pure artifact signal~d to see what the artifacts look like without the rest of the EEG.
 
-Because the compute and apply functionality if split in two different functions, it is possible to compute an MWF on one set of EEG signals with mwf\_compute, and apply it to a different set of EEG signals with mwf\_apply. One restriction is, however, that the number of channels in both EEG sets need to be the same, otherwise the precomputed filter W is incompatible with the EEG test set.
+Because the compute and apply functionality if split in two different functions, it is possible to compute an MWF on one set of EEG signals with mwf\_compute, and apply it to a different set of EEG signals with mwf\_apply. One restriction is that the number of channels in both EEG sets need to be the same, otherwise the precomputed filter W is incompatible with the EEG test set.
 
 \subsection{mwf\_performance}
 
@@ -204,12 +219,13 @@ Because the compute and apply functionality if split in two different functions,
 
 This function computes two performance measures SER and ARR, which are defined in \cite{somers2018generic}. The \textbf{SER} is a measure for distortion of clean EEG caused by the filter. The \textbf{ARR} is a measure for artifact estimation accuracy by the filter. Good performance is indicated by both high SER and high ARR. Both values are expressed on a decibel scale.
 
-In order to compute these measures, the function requires the \textbf{EEG} data, as well as the artifact signal \textbf{d} estimated by the MWF, and the \textbf{mask} used to split EEG in artifact and clean segments. An optional fourth input \textbf{d\_real} can be provided, which should contain the real, ground-truth artifact signal that is estimated by \textbf{d}. Of course, this is only possible to provide for synthetic or simulated EEG data. If d\_real is provided, a more accurate ARR can be computed.
+In order to compute these measures, the function requires the \textbf{EEG} data, as well as the artifact signal \textbf{d} estimated by the MWF, and the \textbf{mask} used to split EEG in artifact and clean segments (NaNs in the mask are ignored). An optional fourth input \textbf{d\_real} can be provided, which should contain the real, ground-truth artifact signal that is estimated by \textbf{d}. Of course, this is only possible to provide for synthetic or simulated EEG data. If d\_real is provided, a more accurate ARR can be computed.
 
 \newpage
 \section{Closing remarks}
 
-The MWF-EEG code is distributed freely online in the hope that it may provide a useful method for other researchers in dealing with artifacts in their EEG data. If this toolbox is useful for your data analysis, please cite~ \cite{somers2018generic} in any publications that may follow from it.
+The MWF-EEG code is distributed freely online in the hope that it may provide a useful method for other researchers in dealing with artifacts in their EEG data. See the \href{www.github.com/exporl/mwf-artifact-removal/blob/master/LICENSE.md}{license file} distributed along with the toolbox for license rights and limitations. If this toolbox is useful for your data analysis, please cite~ \cite{somers2018generic} in any publications that may follow from it.
+
 
 We are open to any suggestions for interesting features or ways to further improve the toolbox. Communication regarding the MWF-EEG toolbox can be addressed through the GitHub website or directly to \href{mailto:ben.somers@med.kuleuven.be}{ben.somers@med.kuleuven.be}
 
@@ -219,7 +235,13 @@ We are open to any suggestions for interesting features or ways to further impro
   B. Somers, Ben, T. Francart and A. Bertrand,
   ``A generic EEG artifact removal algorithm based on the multi-channel Wiener filter", 
   \textit{Journal of Neural Engineering},
-  2018.
+  (2018).
+  
+\bibitem{serizel2010integrated}
+  R. Serizel, M. Moonen, J. Wouters and S.H. Jensen,
+  ``Integrated active noise control and noise reduction in hearing aids", 
+  \textit{IEEE Transactions on Audio, Speech, and Language Processing},
+  18.6 (2018):1137-1146.
 
 \end{thebibliography}
 
