--- a/doc/manual_build/mwf_manual.tex
+++ b/doc/manual_build/mwf_manual.tex
@@ -233,17 +233,18 @@ We are open to any suggestions for interesting features or ways to further impro
 
 \begin{thebibliography}{9}
 
-\bibitem{somers2018generic}
-  B. Somers, Ben, T. Francart and A. Bertrand,
-  ``A generic EEG artifact removal algorithm based on the multi-channel Wiener filter", 
-  \textit{Journal of Neural Engineering},
-  (2018).
+\bibitem{somers2018generic}  
+  Somers, B., Francart, T. and Bertrand, A. (2018).
+  A generic EEG artifact removal method based on the multi-channel Wiener filter.
+  \textit{Journal of Neural Engineering, 15}(3), 036007. 
+  DOI: 10.1088/1741-2552/aaac92
   
 \bibitem{serizel2010integrated}
-  R. Serizel, M. Moonen, J. Wouters and S.H. Jensen,
-  ``Integrated active noise control and noise reduction in hearing aids", 
-  \textit{IEEE Transactions on Audio, Speech, and Language Processing},
-  18.6 (2018):1137-1146.
+  Serizel, R., Moonen, M., Wouters, J. and Jensen, S.H. (2010).
+  Integrated active noise control and noise reduction in hearing aids, 
+  \textit{IEEE Transactions on Audio, Speech, and Language Processing, 18}(6),
+  1137-1146.
+  DOI: 10.1109/TASL.2009.2030948
 
 \end{thebibliography}
 
